[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Board.gd" type="Script" id=1]
[ext_resource path="res://scenes/Card.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PlayerDeck.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/EnemyDeck.tscn" type="PackedScene" id=4]

[node name="Board" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DrawCard" type="Button" parent="."]
margin_left = 20.0
margin_top = 270.0
margin_right = 140.0
margin_bottom = 330.0
text = "DRAW"

[node name="Card" parent="." groups=["main_card"] instance=ExtResource( 2 )]
position = Vector2( 450, 220 )

[node name="PlayerDeck" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 440 )

[node name="EnemyDeck" parent="." instance=ExtResource( 4 )]

[node name="TurnLabel" type="Label" parent="."]
anchor_right = 4.049
anchor_bottom = 0.5
margin_left = 824.0
margin_top = 286.0
margin_right = 963.0
margin_bottom = 300.0
text = "PLAYER TURN"
uppercase = true

[connection signal="ready" from="." to="." method="_on_Board_ready"]
[connection signal="pressed" from="DrawCard" to="." method="_on_DrawCard_Button_pressed"]
